@@ -1,3 +1,4 @@
+* Voiding a contract preserves initial_start_date and activation_history
 * Add sub_status to option
 
 Version 1.4 - 2015-05-29
